# rezehor-core

./: pyproject.toml
config/: .env.example  settings.yaml
src/rezehor/core/: ai_client.py
src/rezehor/utils/: config.py  logger.py
